--- a/css/index.css
+++ b/css/index.css
@@ -98,6 +98,9 @@ h2 {
 .button-disabled {
     background-color: #E4E4E4;
 }
+.hidden {
+    display: none;
+}
 .button-enabled{
     background-color: white;
 }
