--- a/css/index.css
+++ b/css/index.css
@@ -70,7 +70,7 @@ button {
     background: white;
     color: #333;
     border: 0;
-    box-shadow: 0 1px 2px 0px #555;
+    box-shadow: 0 1px 2px 0 #555;
     font-weight: bold;
     border-radius: 5px;
 }
